# locked-in

./: Cargo.toml  Dockerfile  README.md  action.yml
.github/workflows/: build.yml  ci.yml  dogfood.yml  release.yml  test.yml  zizmor.yml
src/: cli.rs  diagnostic.rs  file_types.rs  ignore_directives.rs  lib.rs  main.rs  report.rs  scanner.rs
src/context/: bun.rs  git.rs  lockfiles.rs  mod.rs
src/parsers/: line.rs  markdown.rs  mod.rs  package_json.rs
src/rules/: bun.rs  mod.rs  npm.rs  pnpm.rs  yarn.rs
